--- a/.classpath
+++ b/.classpath
@@ -22,5 +22,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Library/Java/Extensions/jcoord-1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
